# Ignite-Zava-MCP-Server-and-PostgreSQL-Sample

./: .env.template  .gitattributes  AI_AGENT_FEATURE_SUMMARY.md  AI_AGENT_WEBSOCKET_IMPLEMENTATION.md  API_BACKEND_GUIDE.md  API_UPDATE_SUMMARY.md  AUTHENTICATION_COMPLETE.md  BACKEND_API_COMPLETE.md  DEBUG_QUICKSTART.md  DEVCONTAINER_ACCESS.md  DEVCONTAINER_REBUILD.md  Dockerfile  FEATURED_PRODUCTS_IMPLEMENTATION.md  FRONTEND_RUN_GUIDE.md  FRONTEND_SETUP.md  GITHUB_POPUPS_RETAIL_DATABASE_DOCUMENTATION.md  GITHUB_SHOP_REBRAND.md  IMAGE_URL_DATAFLOW_FIX.md  IMAGE_URL_IMPLEMENTATION.md  MANAGEMENT_API_SUMMARY.md  MANAGEMENT_UI_SUMMARY.md  NEW_ENDPOINTS_IMPLEMENTATION.md  QUICK_START.md  README.md  SQLALCHEMY_MIGRATION.md  TOP_CATEGORIES_IMPLEMENTATION.md  VSCODE_DEBUG_GUIDE.md  ZAVA_RETAIL_DATABASE_DOCUMENTATION.md  apphost.cs  apphost.run.json  docker-compose.yml  package-lock.json  postgres-local.yaml  requirements.in  requirements.lock.txt  supplier_contract_view.sql
.aspire/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  postCreateCommand.sh
app/: config.py  finance_mcp_server.py  finance_postgres.py  finance_sqlite.py  sales_analysis.py  sales_analysis_postgres.py  sales_analysis_sqlite.py  supplier_mcp_server.py  supplier_postgres.py  supplier_sqlite.py
app/api/: app.py  (+2 more)
app/mcp/: finance_server.py  pyproject.toml  sales_server.py  supplier_server.py
app/mcp/src/github_shop_mcp/: finance_server.py  supplier_server.py
data/: github_retail_schema.sql  requirements.txt  supplierlist.json
docker-init/: init-db.sh
(+82 files in other folders)
